[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/SonarExperiment.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/beep.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/circle.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/actor_sheet.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/black-ambient.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/machine_hum.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/prefabs/wall.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.0016, 29.1414 )

[sub_resource type="Curve" id=3]
max_value = 100.0
_data = [ Vector2( 0, 71.12 ), 0.0, 0.0, 0, 0, Vector2( 0.430169, 9.52 ), 92.1505, 0.0, 0, 0 ]

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0.776835 ), 0.0, 0.0, 0, 0, Vector2( 0.748359, 0.116835 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.457265, 0.970803 )
colors = PoolColorArray( 0.228401, 0.112061, 0.398438, 1, 0.349755, 0.0666667, 0.972549, 1, 0.94902, 0.94902, 0.94902, 0.184314 )

[sub_resource type="Curve" id=6]
min_value = -1.0
_data = [ Vector2( 0, 0.0352 ), 0.0, 0.0, 0, 0, Vector2( 0.709494, 0 ), -0.393175, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=1]
radius = 27.2472

[node name="Sonar" type="Node2D"]
script = ExtResource( 1 )
sonar_scale_weight = 0.03

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 1022.0
margin_bottom = 599.0
color = Color( 0.141176, 0.278431, 0.266667, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 474.977, 242.223 )

[node name="icon10" type="Sprite" parent="StaticBody2D"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -27.119
pitch_scale = 0.58

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 334.975, 328.311 )
script = ExtResource( 4 )
turn_speed = 4.0
acceleration = 0.1
bounce = 0.521

[node name="Particles" type="CPUParticles2D" parent="Player"]
show_behind_parent = true
position = Vector2( 0, 36.787 )
emitting = false
amount = 12
explosiveness = 0.16
randomness = 0.29
local_coords = false
draw_order = 1
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 0.05
spread = 136.34
flatness = 1.0
gravity = Vector2( 0, 0 )
initial_velocity = 22.39
initial_velocity_random = 0.37
radial_accel = 1.43
radial_accel_random = 0.54
damping_curve = SubResource( 3 )
scale_amount = 0.04
scale_amount_random = 0.49
scale_amount_curve = SubResource( 7 )
color_ramp = SubResource( 5 )
hue_variation = -0.22
hue_variation_random = 0.17
hue_variation_curve = SubResource( 6 )

[node name="Thruster" type="Sprite" parent="Player"]
self_modulate = Color( 0.223529, 0.184314, 0.0588235, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
offset = Vector2( 0, 100 )
region_enabled = true
region_rect = Rect2( 0, 217, 93, 84 )

[node name="Artillery" type="Sprite" parent="Player"]
self_modulate = Color( 0.72549, 0.584314, 0.12549, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
offset = Vector2( 0, -90 )
region_enabled = true
region_rect = Rect2( 0, 36, 93, 120 )

[node name="Body" type="Sprite" parent="Player"]
self_modulate = Color( 0.968627, 0.807843, 0.372549, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 184, 0, 217, 217 )

[node name="Collider" type="CollisionShape2D" parent="Player"]
visible = false
shape = SubResource( 1 )

[node name="LabelSpeed" type="Label" parent="Player"]
margin_top = -69.5295
margin_right = 40.0
margin_bottom = -55.5295
text = "SPEED: "

[node name="BubbleSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 7 )
pitch_scale = 2.11

[node name="MineSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 8 )
volume_db = -7.222
pitch_scale = 0.54

[node name="LongWall3" parent="." instance=ExtResource( 9 )]
editor/display_folded = false
position = Vector2( 530, 0 )

[node name="CollisionShape2D" parent="LongWall3" index="0"]
position = Vector2( 0, -12.7494 )

[node name="LongWall4" parent="." instance=ExtResource( 9 )]
editor/display_folded = false
position = Vector2( 530, 624.718 )

[node name="LongWall5" parent="." instance=ExtResource( 9 )]
editor/display_folded = false
position = Vector2( -22.0468, 274.223 )
rotation = 1.5708

[node name="LongWall6" parent="." instance=ExtResource( 9 )]
editor/display_folded = false
position = Vector2( 1022, 307.311 )
rotation = 1.5708

[editable path="LongWall3"]
